--- a/html_test.html
+++ b/html_test.html
@@ -7,4 +7,4 @@
  <h1 style="background-color:DodgerBlue;">Podnaslov</h1>
  <p>
  <p style="background-color:Tomato;">Odlomak</p>
-<body style=background-color:gold;">
+<body style=background-color:yellow;">
